add get tags method only for current user
